# Data-Science-330

Data science 330/: .gitignore  README.md  hw3_is_sleep.py  machine_learning_explanation.md
Data science 330/dtsc330_26/classifiers/: entity_resolution_classifier.py  reusable_classifier.py
Data science 330/dtsc330_26/readers/: articles.py  grants.py  har.py
Data science 330/dtsc330_26/scripts/: hw3_is_sleep.py  insert_data.py  run_entity_resolution.py  table_creator.py  train_test_entity_resolution.py
Data science 330/dtsc330_26/sql/: create_tables.sql
dtsc_330/: README.md  entity_resolution.md  machine_learning_explanation.md  pyproject.toml
dtsc_330/dtsc330_26/: entity_resolution_features.py  grantee_nn_idx.py  merged_data.py
dtsc_330/dtsc330_26/classifiers/: entity_resolution_classifier.py  reusable_classifier.py
dtsc_330/dtsc330_26/nn_library/: __init__.py  spell_corrector.py
dtsc_330/dtsc330_26/readers/: articles.py  grants.py  har.py  spelling_reader.py
dtsc_330/dtsc330_26/scripts/: generate_spelling_data.py
dtsc_330/dtsc330_26/sql/: create_tables.sql
dtsc_330/scripts/: autoencoder.py  generate_spelling_data.py  hw5.py  run_entity_resolution.py  table_creator.py  train_spelling_corrector.py  wine_quality_classification.py
